--- a/Fortnite1/src/application/PlayInterfaz.fxml
+++ b/Fortnite1/src/application/PlayInterfaz.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.PlayerController">
    <children>
       <VBox layoutX="-1.0" layoutY="1.0" prefHeight="456.0" prefWidth="717.0">
          <children>
@@ -53,7 +53,7 @@
                   <Button layoutX="557.0" layoutY="241.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="94.0" text="Recharge" />
                   <Button layoutX="557.0" layoutY="270.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="94.0" text="Shoot" />
                   <Button layoutX="557.0" layoutY="298.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="94.0" text="Munition" />
-                  <Button layoutX="557.0" layoutY="214.0" mnemonicParsing="false" text="Add Weapon" />
+                  <Button layoutX="557.0" layoutY="214.0" mnemonicParsing="false" onAction="#addWeapon" text="Add Weapon" />
                   <GridPane gridLinesVisible="true" layoutX="372.0" layoutY="336.0" prefHeight="30.0" prefWidth="277.0">
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
