--- a/Fortnite1/src/application/InterfazFortnite.fxml
+++ b/Fortnite1/src/application/InterfazFortnite.fxml
@@ -49,7 +49,7 @@
             <ListView layoutX="40.0" layoutY="58.0" prefHeight="302.0" prefWidth="240.0" />
             <ScrollBar layoutX="263.0" layoutY="59.0" orientation="VERTICAL" prefHeight="302.0" prefWidth="17.0" />
             <Label layoutX="481.0" layoutY="49.0" prefHeight="205.0" prefWidth="127.0" />
-            <GridPane layoutX="422.0" layoutY="33.0" prefHeight="199.0" prefWidth="269.0">
+            <GridPane fx:id="grid" layoutX="422.0" layoutY="33.0" prefHeight="199.0" prefWidth="269.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
